# fastappyx-template

./: .gitignore  README.md  config_variables.py  main.py  pyproject.toml
database_mapping/: client.py  database_types.py  mappers.py
domain/: application.py  business.py  environment.py  identifiable_object.py  user.py
domain/repositories/: base_persistent_repository.py  base_transient_repository.py  master_persistent_repository.py  master_transient_repository.py
domain/repositories/users_repositories/: users_persistent_repository.py  users_transient_repository.py
domain/technologies/: perfect_technology.py  sqlalchemy_technology.py  technology.py
errors/: authentication_error.py  domain_error.py
interface/: identity_converter.py  own_http_interface.py
interface/fastappyx/: base_handler.py  base_sync_handler.py  endpoint.py  errors.py  fast_api_interface_adapter.py  fast_api_websocket_interface_adapter.py  http_interface.py  http_request.py  http_response.py  result.py  websocket_endpoint.py
interface/fastappyx/authenticators/: http_authenticator.py  no_authenticator.py
interface/fastappyx/converters/: converter.py  id_converter.py  list_id_converter.py  string_to_integer_converter.py  string_to_uuid_converter.py
libs/: id_encrypter.py  utils.py
libs/collections/: transient_collection.py
libs/firebase_lib/: authentication_method.py  external_profile.py  firebase_oauth2_authentication_method.py  mock_authentication_method.py
libs/time_lib/: clock.py  gregorian_date.py  gregorian_datetime.py
tests/: test_example.py  test_users.py
(+17 files in other folders)
