[tool.poetry]
name = "fastappyx-template"
version = "0.1.0"
description = ""
authors = ["Matias Dinota <mdinota@eryx.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pytest = "^8.3.3"
cryptography = "^44.0.0"
firebase-admin = "^6.6.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
